[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/towerDefense_tile181.png" type="Texture" id=1]
[ext_resource path="res://assets/threeBarrel.png" type="Texture" id=2]
[ext_resource path="res://Turret/Turret.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 269.681

[node name="Turret" type="Node2D"]
script = ExtResource( 3 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="turret" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="directionOne" type="Node2D" parent="."]
position = Vector2( 0, -50 )

[node name="directionTwo" type="Node2D" parent="."]
position = Vector2( 30, -50 )

[node name="directionThree" type="Node2D" parent="."]
position = Vector2( -30, -50 )

[node name="randMove" type="Timer" parent="."]
one_shot = true

[node name="fire" type="Timer" parent="."]

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource( 1 )
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
